# minisearch

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/minisearch/: __init__.py  cli.py  fuzzy.py  index.py  query.py  scoring.py  search.py  storage.py  tokenizer.py
tests/: test_cli.py  test_fuzzy.py  test_index.py  test_query.py  test_scoring.py  test_search.py  test_storage.py  test_tokenizer.py
