[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minisearch"
version = "0.1.0"
description = "Lightweight full-text search engine with BM25 ranking, boolean queries, and fuzzy matching"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "EdgarOrtegaRamirez" }]
keywords = ["search", "full-text", "inverted-index", "bm25", "information-retrieval"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=6.0", "ruff>=0.10"]

[project.scripts]
minisearch = "minisearch.cli:main"

[project.urls]
Homepage = "https://github.com/EdgarOrtegaRamirez/minisearch"
Repository = "https://github.com/EdgarOrtegaRamirez/minisearch"
Issues = "https://github.com/EdgarOrtegaRamirez/minisearch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/minisearch"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
